2000s website with css styles

--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>1990's Website</title>
+    <title>2000's Website</title>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
-    <h1>1990's Website</h1>
+    <nav id="nav-container">
+      <ul id="navbar">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html" class="active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+      </ul>
+    </nav>
+    <section class="content">
+    <h1>2000's Website</h1>
     <p>
-      It's the 90's and this is a <strong>state of the art website</strong
-      ><em> for the time</em>. Check out this awesome
+      It's the 2000's and this is a <strong>state of the art website</strong>
+      <em> for the time</em>. Check out this awesome
       <a href="about.html">link</a>
       Wow that was so cool right?!?
     </p>
 
     <p>What about this image how awesome is that?!?!</p>
-    <img height="540px" src="cat.jpg" alt="Cat" />
+    <img height="540px" src="images/cat.jpg" alt="Cat" />
 
     <h1>Top Movies</h1>
     <table>
@@ -63,5 +75,6 @@
 
     <p>Wow look at all this content coming to you from across the world!</p>
     <a href="https://online.op.ac.nz">Check out this other cool website!</a>
+  </section>
   </body>
 </html>
