--- a/about.html
+++ b/about.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>1990's Website - About</title>
+    <title>2000's Website | About</title>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
-    <h1>1990's Website - About</h1>
+    <header>
+      <nav id="nav-container">
+        <ul id="navbar">
+          <li class="nav-item"><a href="index.html">Home</a></li>
+          <li class="nav-item"><a href="about.html" class="active">About</a></li>
+        </ul>
+      </nav>
+    </header>
+    <h1>2000's Website | About</h1>
     <p>
-      It's the 90's and this is a state of the art website for the time. You are
+      It's the 2000's and this is a state of the art website for the time. You are
       on the about page of this revolutionary website!
     </p>
     <p>Click <a href="index.html">this</a> to go back to the main page!</p>
