--- a/about.html
+++ b/about.html
@@ -5,32 +5,36 @@
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
-    <header>
-      <nav id="nav-container">
-        <ul id="navbar">
-          <li class="nav-item"><a href="index.html">Home</a></li>
-          <li class="nav-item"><a href="about.html" class="active">About</a></li>
-        </ul>
-      </nav>
-    </header>
-    <h1>2000's Website | About</h1>
-    <p>
-      It's the 2000's and this is a state of the art website for the time. You are
-      on the about page of this revolutionary website!
-    </p>
-    <p>Click <a href="index.html">this</a> to go back to the main page!</p>
+    <nav id="nav-container">
+      <ul id="navbar">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html" class="active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+      </ul>
+    </nav>
+    <section class="content">
+      <h1>2000's Website | About</h1>
+      <p>
+        It's the 2000's and this is a state of the art website for the time. You are
+        on the about page of this revolutionary website!
+      </p>
+      <p>Click <a href="index.html">this</a> to go back to the main page!</p>
 
-    <h2>Shopping List</h2>
-    <ul>
-      <li>milk</li>
-      <li>bread</li>
-      <li>eggs</li>
-      <li>salami</li>
-      <li>cheese</li>
-      <li>steak</li>
-      <li>pork</li>
-      <li>bacon</li>
-      <li>Chicken</li>
-    </ul>
+      <h2>Shopping List</h2>
+      <ul>
+        <li>milk</li>
+        <li>bread</li>
+        <li>eggs</li>
+        <li>salami</li>
+        <li>cheese</li>
+        <li>steak</li>
+        <li>pork</li>
+        <li>bacon</li>
+        <li>Chicken</li>
+      </ul>
+    </section>
   </body>
 </html>
