--- a/index.html
+++ b/index.html
@@ -38,38 +38,38 @@
       </tr>
       <tr>
         <td>1</td>
-        <td>Star Wars</td>
-        <td>1977</td>
-        <td>George Lucas</td>
-        <td>Sci-Fi/Fantasy</td>
+        <td>The Matrix</td>
+        <td>1999</td>
+        <td>The Wachowskis</td>
+        <td>Sci-Fi/Action</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>Raiders of the Lost Ark</td>
-        <td>1981</td>
-        <td>Steven Spielberg</td>
-        <td>Adventure</td>
+        <td>Titanic</td>
+        <td>1997</td>
+        <td>James Cameron</td>
+        <td>Romance/Drama</td>
       </tr>
       <tr>
         <td>3</td>
-        <td>The Godfather</td>
-        <td>1972</td>
-        <td>Francis Ford Coppola</td>
-        <td>Crime/Drama</td>
+        <td>Jurassic Park</td>
+        <td>1993</td>
+        <td>Steven Spielberg</td>
+        <td>Adventure/Sci-Fi</td>
       </tr>
       <tr>
         <td>4</td>
-        <td>Back to the Future</td>
-        <td>1985</td>
-        <td>Robert Zemeckis</td>
-        <td>Sci-Fi/Comedy</td>
+        <td>Pulp Fiction</td>
+        <td>1994</td>
+        <td>Quentin Tarantino	</td>
+        <td>Crime/Drama</td>
       </tr>
       <tr>
         <td>5</td>
-        <td>The Breakfast Club</td>
-        <td>1985</td>
-        <td>John Hughes</td>
-        <td>Teen/Drama</td>
+        <td>Fight Club</td>
+        <td>1999</td>
+        <td>David Fincher</td>
+        <td>Drama/Thriller</td>
       </tr>
     </table>
 
