--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>2000's Website | About</title>
+    <title>Modern Website | About</title>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
@@ -16,11 +16,11 @@
       </ul>
     </nav>
     <section class="content">
-      <h1>2000's Website | About</h1>
+      <h1>Modern Website | About</h1>
       <p>
-        It's the 2000's and this is a state of the art website for the time. You are
-        on the about page of this revolutionary website!
-      </p>
+        This is a <strong>state of the art website </strong>
+        <em>for the modern era</em>. This is the about page where you can learn all about the ins and outs of why this is a modern webpage and why we think you will love it. 
+      </p>  
       <p>Click <a href="index.html">this</a> to go back to the main page!</p>
 
       <h2>Shopping List</h2>
