--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>2000's Website</title>
+    <title>Modern Website</title>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
@@ -15,19 +15,24 @@
         </li>
       </ul>
     </nav>
+    <section class="img">
+      <img id="cat-img" src="images/cat-cropped.jpg" alt="Cat" />
+      <img id="cat-img" src="images/cat-cropped.jpg" alt="Cat" />
+      <img id="cat-img" src="images/cat-cropped.jpg" alt="Cat" />
+      <img id="cat-img" src="images/cat-cropped.jpg" alt="Cat" />
+      <img id="cat-img" src="images/cat-cropped.jpg" alt="Cat" />
+      <img id="cat-img" src="images/cat-cropped.jpg" alt="Cat" />
+    </section>
     <section class="content">
-    <h1>2000's Website</h1>
+
+    <h1>Modern Website</h1>
     <p>
-      It's the 2000's and this is a <strong>state of the art website</strong>
-      <em> for the time</em>. Check out this awesome
-      <a href="about.html">link</a>
-      Wow that was so cool right?!?
+      This is a <strong>state of the art website </strong>
+      <em>for the modern era</em>. 
     </p>
 
-    <p>What about this image how awesome is that?!?!</p>
-    <img height="540px" src="images/cat.jpg" alt="Cat" />
-
-    <h1>Top Movies</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2>Top Movies</h2>
     <table>
       <tr>
         <td>Rank</td>
@@ -72,9 +77,7 @@
         <td>Drama/Thriller</td>
       </tr>
     </table>
-
-    <p>Wow look at all this content coming to you from across the world!</p>
-    <a href="https://online.op.ac.nz">Check out this other cool website!</a>
+    <a href="https://online.op.ac.nz">Check out this other Modern website!</a>
   </section>
   </body>
 </html>
