--- a/index.html
+++ b/index.html
@@ -1,67 +1,136 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en-US">
   <head>
-    <title>1990's Website</title>
+    <meta charset="utf-8" />
+
+    <title>Number guessing game</title>
+
+    <style>
+      html {
+        font-family: sans-serif;
+      }
+
+      body {
+        width: 50%;
+        max-width: 800px;
+        min-width: 480px;
+        margin: 0 auto;
+      }
+
+      .form input[type="number"] {
+        width: 200px;
+      }
+
+      .lastResult {
+        color: white;
+        padding: 3px;
+      }
+    </style>
   </head>
+
   <body>
-    <h1>1990's Website</h1>
+    <h1>Number guessing game</h1>
+
     <p>
-      It's the 90's and this is a <strong>state of the art website</strong
-      ><em> for the time</em>. Check out this awesome
-      <a href="about.html">link</a>
-      Wow that was so cool right?!?
+      We have selected a random number between 1 and 100. See if you can guess
+      it in 10 turns or fewer. We'll tell you if your guess was too high or too
+      low.
     </p>
 
-    <p>What about this image how awesome is that?!?!</p>
-    <img height="540px" src="cat.jpg" alt="Cat" />
+    <div class="form">
+      <label for="guessField">Enter a guess: </label>
+      <input
+        type="number"
+        min="1"
+        max="100"
+        required
+        id="guessField"
+        class="guessField" />
+      <input type="submit" value="Submit guess" class="guessSubmit" />
+    </div>
 
-    <h1>Top Movies</h1>
-    <table>
-      <tr>
-        <td>Rank</td>
-        <td>Movie Title</td>
-        <td>Release Year</td>
-        <td>Director</td>
-        <td>Genre</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>Star Wars</td>
-        <td>1977</td>
-        <td>George Lucas</td>
-        <td>Sci-Fi/Fantasy</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Raiders of the Lost Ark</td>
-        <td>1981</td>
-        <td>Steven Spielberg</td>
-        <td>Adventure</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>The Godfather</td>
-        <td>1972</td>
-        <td>Francis Ford Coppola</td>
-        <td>Crime/Drama</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>Back to the Future</td>
-        <td>1985</td>
-        <td>Robert Zemeckis</td>
-        <td>Sci-Fi/Comedy</td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td>The Breakfast Club</td>
-        <td>1985</td>
-        <td>John Hughes</td>
-        <td>Teen/Drama</td>
-      </tr>
-    </table>
+    <div class="resultParas">
+      <p class="guesses"></p>
+      <p class="lastResult"></p>
+      <p class="lowOrHi"></p>
+    </div>
 
-    <p>Wow look at all this content coming to you from across the world!</p>
-    <a href="https://online.op.ac.nz">Check out this other cool website!</a>
+    <script>
+      let randomNumber = Math.floor(Math.random() * 100) + 1;
+
+      const guesses = document.querySelector(".guesses");
+      const lastResult = document.querySelector(".lastResult");
+      const lowOrHi = document.querySelector(".lowOrHi");
+
+      const guessSubmit = document.querySelector(".guessSubmit");
+      const guessField = document.querySelector(".guessField");
+
+      let guessCount = 1;
+      let resetButton;
+    
+      function checkGuess() {
+        const userGuess = Number(guessField.value);
+        if (guessCount === 1) {
+          guesses.textContent = "Previous guesses:";
+        }
+        guesses.textContent = `${guesses.textContent} ${userGuess}`;
+
+        if (userGuess === randomNumber) {
+          lastResult.textContent = "Congratulations! You got it right!";
+          lastResult.style.backgroundColor = "green";
+          lowOrHi.textContent = "";
+          setGameOver();
+        } else if (guessCount === 10) {
+          lastResult.textContent = "!!!GAME OVER!!!";
+          lowOrHi.textContent = "";
+          setGameOver();
+        } else {
+          lastResult.textContent = "Wrong!";
+          lastResult.style.backgroundColor = "red";
+          if (userGuess < randomNumber) {
+            lowOrHi.textContent = "Last guess was too low!";
+          } else if (userGuess > randomNumber) {
+            lowOrHi.textContent = "Last guess was too high!";
+          }
+        }
+
+        guessCount++;
+        guessField.value = "";
+        guessField.focus();
+      }
+
+      guessSubmit.addEventListener("click", checkGuess);
+
+      function setGameOver() {
+        guessField.disabled = true;
+        guessSubmit.disabled = true;
+        resetButton = document.createElement("button");
+        resetButton.textContent = "Start new game";
+        document.body.append(resetButton);
+        resetButton.addEventListener("click", resetGame);
+      }
+
+      function resetGame() {
+        guessCount = 1;
+
+        const resetParas = document.querySelectorAll(".resultParas p");
+        for (const resetPara of resetParas) {
+          resetPara.textContent = "";
+        }
+
+        resetButton.parentNode.removeChild(resetButton);
+
+        guessField.disabled = false;
+        guessSubmit.disabled = false;
+        guessField.value = "";
+        guessField.focus();
+
+        lastResult.style.backgroundColor = "white";
+
+        randomNumber = Math.floor(Math.random() * 100) + 1;
+      }
+
+
+    </script>
   </body>
 </html>
