--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         max-width: 800px;
         min-width: 480px;
         margin: 0 auto;
+        background-color: #323232;
+        color: #aaaaaa;
       }
 
       .form input[type="number"] {
@@ -24,6 +26,7 @@
       .lastResult {
         color: white;
         padding: 3px;
+        text-align: center;
       }
     </style>
   </head>
@@ -125,7 +128,7 @@
         guessField.value = "";
         guessField.focus();
 
-        lastResult.style.backgroundColor = "white";
+        lastResult.style.backgroundColor = "#323232";
 
         randomNumber = Math.floor(Math.random() * 100) + 1;
       }
