--- a/index.html
+++ b/index.html
@@ -1,67 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>1990's Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HTML 5 Boilerplate</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>1990's Website</h1>
-    <p>
-      It's the 90's and this is a <strong>state of the art website</strong
-      ><em> for the time</em>. Check out this awesome
-      <a href="about.html">link</a>
-      Wow that was so cool right?!?
-    </p>
-
-    <p>What about this image how awesome is that?!?!</p>
-    <img height="540px" src="cat.jpg" alt="Cat" />
-
-    <h1>Top Movies</h1>
-    <table>
-      <tr>
-        <td>Rank</td>
-        <td>Movie Title</td>
-        <td>Release Year</td>
-        <td>Director</td>
-        <td>Genre</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>Star Wars</td>
-        <td>1977</td>
-        <td>George Lucas</td>
-        <td>Sci-Fi/Fantasy</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Raiders of the Lost Ark</td>
-        <td>1981</td>
-        <td>Steven Spielberg</td>
-        <td>Adventure</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>The Godfather</td>
-        <td>1972</td>
-        <td>Francis Ford Coppola</td>
-        <td>Crime/Drama</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>Back to the Future</td>
-        <td>1985</td>
-        <td>Robert Zemeckis</td>
-        <td>Sci-Fi/Comedy</td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td>The Breakfast Club</td>
-        <td>1985</td>
-        <td>John Hughes</td>
-        <td>Teen/Drama</td>
-      </tr>
-    </table>
-
-    <p>Wow look at all this content coming to you from across the world!</p>
-    <a href="https://online.op.ac.nz">Check out this other cool website!</a>
+    <script src="index.js"></script>
   </body>
 </html>
